--- a/rank/index.html
+++ b/rank/index.html
@@ -320,21 +320,16 @@
 <tr>
 <td align="left">King</td>
 <td align="center">Guild Master</td>
-<td align="right">6</td>
+<td align="right">5</td>
 </tr>
 <tr>
 <td align="left">Hands</td>
 <td align="center">CO-GM</td>
-<td align="right">5</td>
+<td align="right">4</td>
 </tr>
 <tr>
 <td align="left">Council</td>
 <td align="center">Senior Officer</td>
-<td align="right">4</td>
-</tr>
-<tr>
-<td align="left">Scribe</td>
-<td align="center">Guild Admin</td>
 <td align="right">3</td>
 </tr>
 <tr>
@@ -348,23 +343,28 @@
 <td align="right">1</td>
 </tr>
 <tr>
+<td align="left">Master at Arms</td>
+<td align="center">PvP &amp; PvE Master</td>
+<td align="right">Non-Leader</td>
+</tr>
+<tr>
+<td align="left">Warrior</td>
+<td align="center">PvP Master</td>
+<td align="right">Non-Leader</td>
+</tr>
+<tr>
 <td align="left">Knight</td>
 <td align="center">Active Member Veteran</td>
 <td align="right">Non-Leader</td>
 </tr>
 <tr>
 <td align="left">Squire</td>
-<td align="center">Active Memeber Normal</td>
+<td align="center">Active Member Normal</td>
 <td align="right">Non-Leader</td>
 </tr>
 <tr>
 <td align="left">Common</td>
-<td align="center">Active Member General</td>
-<td align="right">Non-Leader</td>
-</tr>
-<tr>
-<td align="left">Peasant</td>
-<td align="center">New Member</td>
+<td align="center">New/General Member</td>
 <td align="right">Non-Leader</td>
 </tr>
 </tbody>
